included install command for the particular repo of ggman that was used

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -9,6 +9,7 @@ knitr::opts_chunk$set(cache.path = "03_cache/")
 
 library(phdFunctions)
 #devtools::install_github('murraycadzow/UpSetR')
+#devtools::install_github('mkanai/ggman')
 library(UpSetR)
 library(Homo.sapiens)
 library(ggbio)
